Src/RpcInterface/XilEnvRpc.h

CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetAPIVersion(void);
union BB_VARI {
    int8_t b;               // BB_BYTE
    uint8_t ub;             // BB_UBYTE
    int16_t w;              // BB_WORD
    uint16_t uw;            // BB_UWORD
    int32_t dw;             // BB_DWORD
    uint32_t udw;           // BB_UDWORD
    int64_t qw;             // BB_QWORD
    uint64_t uqw;           // BB_UQWORD
    float f;                // BB_FLOAT
    double d;               // BB_DOUBLE
};
typedef struct CAN_ACCEPTANCE_WINDOWS {
    int Channel;   // Kanalnummer 0...3
    int StartId;   // Beginn des ID-Fensters
    int EndId;     // Ende des ID-Fensters (Wenn nur eine ID gewuenscht EndID = StartID)
    int Fill1;     // Fuellbytes
} CAN_ACCEPT_MASK;
typedef struct CAN_MESSAGE_QUEUE_ELEM {
    uint32_t id;             // 4Byte     Message ID
    unsigned char size;           // 1Byte     Laenge der Message (1...8)
    unsigned char ext;            // 1Byte     1 -> 29Bit-ID, 0 -> 11Bit-ID
    unsigned char flag;           // 1Byte     sollte 0 sein (interne Verwendung)
    unsigned char channel;        // 1Byte     CAN-Kanal (0...7)
    unsigned char node;           // 1Byte     1 -> wurde von XilEnv gesendet 0 -> kommt von extern (nur RX)
    unsigned char fill[7];        // 7Byte     N.C.
    uint64_t timestamp;   // 8Byte     N.C.
    unsigned char data[8];        // 8Byte     Daten-Bytes der Message
} CAN_FIFO_ELEM;                                // 32Bytes
typedef struct CAN_FD_MESSAGE_QUEUE_ELEM {
    uint32_t id;             // 4Byte     Message ID
    unsigned char size;           // 1Byte     Laenge der Message (1...64)
    unsigned char ext;            // 1Byte     1 -> 29Bit-ID, 0 -> 11Bit-ID
    unsigned char flag;           // 1Byte     sollte 0 sein (interne Verwendung)
    unsigned char channel;        // 1Byte     CAN-Kanal (0...7)
    unsigned char node;           // 1Byte     1 -> wurde von XilEnv gesendet 0 -> kommt von extern (nur RX)
    unsigned char fill[7];        // 7Byte     N.C.
    uint64_t timestamp;   // 8Byte     N.C.
    unsigned char data[64];       // 8Byte     Daten-Bytes der Message
} CAN_FD_FIFO_ELEM;                             // 88Bytes
// A2LLink
typedef struct {
    void *Data;
} XILENV_LINK_DATA;
enum A2L_DATA_TYPE { A2L_DATA_TYPE_MEASUREMENT = 0, A2L_DATA_TYPE_VALUE = 1, A2L_DATA_TYPE_ASCII = 2,
                     A2L_DATA_TYPE_VAL_BLK = 3, A2L_DATA_TYPE_CURVE = 4, A2L_DATA_TYPE_MAP = 5, 
                     A2L_DATA_TYPE_CUBOID = 6, A2L_DATA_TYPE_CUBE_4 = 7, A2L_DATA_TYPE_CUBE_5 = 8, 
                     A2L_DATA_TYPE_ERROR = -1 };
enum A2L_ELEM_TYPE { A2L_ELEM_TYPE_INT = 0, A2L_ELEM_TYPE_UINT = 1, A2L_ELEM_TYPE_DOUBLE = 2, 
                     A2L_ELEM_TYPE_PHYS_DOUBLE = 3, A2L_ELEM_TYPE_TEXT_REPLACE = 4, A2L_ELEM_TYPE_ERROR = -1 };
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetDataToLink(int LinkNr, int Index, XILENV_LINK_DATA *Data, const char **ret_Error);
// A2LLinks helper
CFUNC SCRPCDLL_API enum A2L_DATA_TYPE __STDCALL__ XilEnv_GetLinkDataType(XILENV_LINK_DATA *Data);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetLinkDataArrayCount(XILENV_LINK_DATA *Data);
// Single values
CFUNC SCRPCDLL_API enum A2L_ELEM_TYPE __STDCALL__ XilEnv_GetLinkSingleValueDataType(XILENV_LINK_DATA *Data);
CFUNC SCRPCDLL_API uint32_t __STDCALL__ XilEnv_GetLinkSingleValueFlags(XILENV_LINK_DATA *Data);
CFUNC SCRPCDLL_API double __STDCALL__ XilEnv_GetLinkSingleValueDataDouble(XILENV_LINK_DATA *Data);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkSingleValueDataDouble(XILENV_LINK_DATA *Data, double Value);
CFUNC SCRPCDLL_API int64_t __STDCALL__ XilEnv_GetLinkSingleValueDataInt(XILENV_LINK_DATA *Data);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkSingleValueDataInt(XILENV_LINK_DATA *Data, int64_t Value);
CFUNC SCRPCDLL_API uint64_t __STDCALL__ XilEnv_GetLinkSingleValueDataUint(XILENV_LINK_DATA *Data);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkSingleValueDataUint(XILENV_LINK_DATA *Data, uint64_t Value);
CFUNC SCRPCDLL_API const char* __STDCALL__ XilEnv_GetLinkSingleValueDataStringPtr(XILENV_LINK_DATA *Data);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkSingleValueDataString(XILENV_LINK_DATA *Data, const char *Value);
CFUNC SCRPCDLL_API const char* __STDCALL__ XilEnv_GetLinkSingleValueUnitPtr(XILENV_LINK_DATA *Data);
// Array of values
CFUNC SCRPCDLL_API enum A2L_ELEM_TYPE __STDCALL__ XilEnv_GetLinkArrayValueDataType(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API uint32_t __STDCALL__ XilEnv_GetLinkArrayValueFlags(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetLinkArrayValueDimensionCount(XILENV_LINK_DATA *Data, int ArrayNo);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetLinkArrayValueDimension(XILENV_LINK_DATA *Data, int ArrayNo, int DimNo);
CFUNC SCRPCDLL_API double __STDCALL__ XilEnv_GetLinkArrayValueDataDouble(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkArrayValueDataDouble(XILENV_LINK_DATA *Data, int ArrayNo, int Number, double Value);
CFUNC SCRPCDLL_API int64_t __STDCALL__ XilEnv_GetLinkArrayValueDataInt(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkArrayValueDataInt(XILENV_LINK_DATA *Data, int ArrayNo, int Number, int64_t Value);
CFUNC SCRPCDLL_API uint64_t __STDCALL__ XilEnv_GetLinkArrayValueDataUint(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkArrayValueDataUint(XILENV_LINK_DATA *Data, int ArrayNo, int Number, uint64_t Value);
CFUNC SCRPCDLL_API const char* __STDCALL__ XilEnv_GetLinkArrayValueDataStringPtr(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkArrayValueDataString(XILENV_LINK_DATA *Data, int ArrayNo, int Number, const char *Value);
CFUNC SCRPCDLL_API const char* __STDCALL__ XilEnv_GetLinkArrayValueUnitPtr(XILENV_LINK_DATA *Data, int ArrayNo, int Number);